charts/godemo48/resources/ingress.yaml
---
# Source: godemo48/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: godemo48
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: godemo48
          servicePort: 80
    host: godemo48.mydomain
  tls:
  - hosts:
    - godemo48.mydomain
    secretName: ""
